--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 
         // ✅ إعداد اللغة والاتجاه (RTL أو LTR)
         const html = document.documentElement;
-        if (savedLang === "ar") {
-            useArabic = true;
+        if (useArabic == true) {
+            
             html.lang = "ar";
             html.dir = "rtl";
         } else {
-            useArabic = false;
+         
             html.lang = "en";
             html.dir = "ltr";
         }
