--- a/pages/projects/selectedPand.html
+++ b/pages/projects/selectedPand.html
@@ -1,21 +1,20 @@
 <script>
-    let dataBaseId = null;
-    let dbNoUpgrade = null;
-    let dbUpgrade = null;
+    let dataBaseIdForSelectedPand = null;
+    let dbNoUpgradSelectedPand = null;
+    let dbUpgradSelectedPand = null;
     let selectedPandId = null;
-    async function initSelectedPandPage ()
+    async function initSelectedPandPage()
     {
 
-        dataBaseId = 'ite_' + localStorage.getItem( 'selectedProject' );
-        dbNoUpgrade = await new noUpgrade( dataBaseId );
-        dbUpgrade = await new upgrade( dataBaseId );
-        selectedPandId = localStorage.getItem( 'selectedPand' );
-
-
-        await restoreAllInputsFromIndexDB( "mainSelectedPandPage", dbNoUpgrade, selectedPandId );
-        await watchingAllInputs2IndexDB( "mainSelectedPandPage", dbNoUpgrade, selectedPandId );
-
-
+        dataBaseIdForSelectedPand = 'ite_' + localStorage.getItem('selectedProject');
+        dbNoUpgradSelectedPand = await new noUpgrade(dataBaseIdForSelectedPand);
+        dbUpgradSelectedPand = await new upgrade(dataBaseIdForSelectedPand);
+        selectedPandId = localStorage.getItem('selectedPand');
+        q('selectedPandId eeeeeee -> ' + selectedPandId);
+        //عرض معرف البند
+        document.getElementById("selectedPandId").innerText = selectedPandId;
+        await restoreAllInputsFromIndexDB("mainSelectedPandPage", dbNoUpgradSelectedPand, selectedPandId);
+        await watchingAllInputs2IndexDB("mainSelectedPandPage", dbNoUpgradSelectedPand, selectedPandId);
 
     }
 
@@ -26,51 +25,57 @@
     <textarea id="pandText"></textarea>
     <br>
     <input type="number" id="kmia">
-     <br>
+    <br>
     <input type="number" id="sear">
-     <br>
+    <br>
     <input type="number" id="tot">
     <br>
     <h3 id="t_137"></h3>
     <select id="kindFinancialSelectPand">
         <option disabled selected id="t_1259"></option>
     </select>
- <h3 id="t_66"></h3>
-     <select id="UnitPand">
+    <h3 id="t_66"></h3>
+    <select id="UnitPand">
         <option disabled selected id="t_1262"></option>
     </select>
+    <!-- الكود التعريفي -->
+    <br><br>
+    <h3 id="t_615"></h3>
+    <label id="selectedPandId"></label>
+
 </div>
 
 <script>
-   async function calTot() {
-  const kmia_ = document.getElementById("kmia");
-  const sear_ = document.getElementById("sear");
-  const tot_ = document.getElementById("tot");
+    async function calTot()
+    {
+        const kmia_ = document.getElementById("kmia");
+        const sear_ = document.getElementById("sear");
+        const tot_ = document.getElementById("tot");
 
-  let k = parseFloat(kmia_.value) || 0;
-  let s = parseFloat(sear_.value) || 0;
+        let k = parseFloat(kmia_.value) || 0;
+        let s = parseFloat(sear_.value) || 0;
 
-  tot_.value = (k * s).toFixed(DecimalPoint); // التقريب لرقمين عشريين (اختياري)
-  isTableWatcherEnabled=false;
-                await dbNoUpgrade.keySet( selectedPandId, 'tot', tot_.value );
-                  isTableWatcherEnabled=true;
-}
+        tot_.value = (k * s).toFixed(DecimalPoint); // التقريب لرقمين عشريين (اختياري)
+        isTableWatcherEnabled = false;
+        await dbNoUpgradSelectedPand.keySet(selectedPandId, 'tot', tot_.value);
+        isTableWatcherEnabled = true;
+    }
 
 
     //#region اختيار نوع وحدة القياس
-    function pandUnitSelect ()
+    function pandUnitSelect()
     {
-        const select = document.getElementById( "UnitPand" );
+        const select = document.getElementById("UnitPand");
 
-        for ( let cIndex = 0; cIndex <= 10; cIndex++ )
+        for (let cIndex = 0; cIndex <= 10; cIndex++)
         {
-            const name = getUnitByCIndex( cIndex, langSelectList0 );
-            if ( name )
+            const name = getUnitByCIndex(cIndex, langSelectList0);
+            if (name)
             {
-                const option = document.createElement( "option" );
+                const option = document.createElement("option");
                 option.value = cIndex;
                 option.textContent = name;
-                select.appendChild( option );
+                select.appendChild(option);
             }
         }
     }
@@ -79,19 +84,19 @@
 
 
     //#region اختيار نوع البند المالي
-    function pandKindFinancialSelect ()
+    function pandKindFinancialSelect()
     {
-        const select = document.getElementById( "kindFinancialSelectPand" );
+        const select = document.getElementById("kindFinancialSelectPand");
 
-        for ( let cIndex = 0; cIndex <= 10; cIndex++ )
+        for (let cIndex = 0; cIndex <= 10; cIndex++)
         {
-            const name = getKindFinancialByCIndex( cIndex, langSelectList0 );
-            if ( name )
+            const name = getKindFinancialByCIndex(cIndex, langSelectList0);
+            if (name)
             {
-                const option = document.createElement( "option" );
+                const option = document.createElement("option");
                 option.value = cIndex;
                 option.textContent = name;
-                select.appendChild( option );
+                select.appendChild(option);
             }
         }
     }
