--- a/pages/testAndTools/test.html
+++ b/pages/testAndTools/test.html
@@ -1,104 +1,136 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <title>زر بتأثير ضغط بطيء</title>
+
+
   <style>
-    .btn-slow {
-      display: inline-block;
-      border: none;
-      border-radius: 30px;
-      background: linear-gradient(145deg, #4a6bff, #3a5bef);
-      color: white;
-      padding: 18px 36px;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      position: relative;
-      overflow: hidden;
-      transition: all 2s cubic-bezier(0.16, 1, 0.3, 1);
-      box-shadow: 0 10px 20px rgba(58, 91, 239, 0.4);
-      z-index: 0;
+ 
+
+    .section00 {
+      display: none;
+      padding: 20px;
+      background-color: white;
+      margin: 10px;
+      border-radius: 10px;
     }
 
-    .btn-slow:active {
-      transform: scale(0.92) translateY(8px);
-      box-shadow: 0 2px 5px rgba(58, 91, 239, 0.2);
-      background: linear-gradient(145deg, #3a5bef, #2a4bdf);
+    .active00 {
+      display: block;
     }
 
-    /* موجة دائرية من المنتصف */
-    .btn-slow:active::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 20px;
-      height: 20px;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      animation: slowRipple 1.5s ease-out;
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    @keyframes slowRipple {
-      0% {
-        transform: translate(-50%, -50%) scale(0.8);
-        opacity: 1;
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.5);
-        opacity: 0.5;
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(2.5);
-        opacity: 0;
-      }
-    }
-
-    /* تظليل تدريجي أثناء الضغط */
-    .btn-slow:active::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.1);
-      animation: slowDarken 1s linear;
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    @keyframes slowDarken {
-      0% {
-        opacity: 0;
-        background: rgba(0,0,0,0);
-      }
-      25% {
-        opacity: 0.25;
-        background: rgba(0,0,0,0.05);
-      }
-      50% {
-        opacity: 0.5;
-        background: rgba(0,0,0,0.1);
-      }
-      75% {
-        opacity: 0.75;
-        background: rgba(0,0,0,0.15);
-      }
-      100% {
-        opacity: 1;
-        background: rgba(0,0,0,0.2);
-      }
-    }
+  
   </style>
-</head>
-<body>
 
-  <button class="btn-slow">زر أنيق</button>
 
-</body>
-</html>
+
+
+
+    <button onclick="showSection00('allProjects')">
+      <img id="i_allmo" alt="allProjects" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+      <span id="t_159"></span>
+    </button>
+    <button onclick="showSection00('setting')">
+      <img id="i_setting" alt="setting" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
+      <span id="t_62"></span>
+    </button>
+
+
+ 
+
+  <!-- ✅ الأقسام (تظهر حسب القسم المختار) -->
+  <div id="allProjects" class="section00"></div>
+  <div id="setting" class="section00"></div>
+
+
+  <!-- ✅ JavaScript الخاص بالتهيئة والتحميل -->
+  <script>
+    const loadedPages00 = {
+      setting: false,
+      allProjects: false
+    };
+
+    const pageMap00 = {
+      setting: "pages/setting.html",
+      allProjects: "pages/projects/condations.html"
+    };
+
+    let selectedPage00 = null;//تستخدم في دوال اخري خارج هذة الصفحة لذا يجب عدم تغير الاسم
+    let targetSection00 = null;
+
+    //يجب الحفاظ علي اسم الداله كما هو لانها تستخدم من خارج الصفحة
+    async function showSection00(sectionId) {
+      await loadSection00(sectionId);
+    }
+
+    async function loadSection00(sectionId) {
+      try {
+        if (selectedPage00 === sectionId && loadedPages00[sectionId]) return;
+
+        selectedPage00 = sectionId;
+        targetSection00 = document.getElementById(sectionId);
+
+        document.querySelectorAll(".section00").forEach(section =>
+          section.classList.remove("active00")
+        );
+        targetSection00.classList.add("active00");
+
+        if (!loadedPages00[sectionId] && pageMap00[sectionId]) {
+          targetSection00.innerHTML = '<div class="loader">جاري التحميل...</div>';
+          await loadPageContent00(sectionId, targetSection00);
+          loadedPages00[sectionId] = true;
+        }
+
+        await handleSectionInit00(sectionId);
+   
+
+      } catch (error) {
+        console.error("خطأ أثناء تحميل القسم:", error);
+        targetSection00.innerHTML = "<p>⚠️ فشل تحميل الصفحة.</p>";
+      }
+    }
+
+   async function loadPageContent00(sectionId, container) {
+  const url = pageMap00[sectionId];
+  const response = await fetch(url);
+  if (!response.ok) throw new Error("الملف غير موجود");
+
+  const html = await response.text();
+  const temp = document.createElement("div");
+  temp.innerHTML = html;
+
+  const scripts = temp.querySelectorAll("script");
+  scripts.forEach(script => script.remove());
+
+  container.innerHTML = temp.innerHTML;
+
+  // تحميل السكربتات واحداً تلو الآخر
+  for (const script of scripts) {
+    await new Promise((resolve, reject) => {
+      const newScript = document.createElement("script");
+      if (script.src) {
+        newScript.src = script.src;
+        newScript.onload = resolve;
+        newScript.onerror = reject;
+      } else {
+        newScript.textContent = script.textContent;
+        resolve();
+      }
+      document.body.appendChild(newScript);
+    });
+  }
+}
+
+    async function handleSectionInit00(sectionId) {
+      switch (sectionId) {
+        case 'allProjects':
+          await initAllProjectPage();
+          break;
+        case 'setting':
+          await initSettingPage();
+          break;
+       
+      }
+    }
+
+  </script>
+
+
+
+
